Issue #DV-53: Added overflow hidden to fix display inline-block rule from module css

--- a/themes/nyiaarhus/scss/modules/_addtoany.scss
+++ b/themes/nyiaarhus/scss/modules/_addtoany.scss
@@ -8,6 +8,7 @@
   background-color: $white;
   box-sizing: border-box;
   display: flex;
+  overflow: hidden;
   transition: width .25s;
 
   &.is-sticky {
